--- a/NBA about page.html
+++ b/NBA about page.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
-<html lang ="en">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel ='stylesheet' href="stylesheet.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link rel='stylesheet' href="stylesheet.css">
 
 
 
@@ -12,68 +14,65 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Basketball for All</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mainNav"
-        aria-controls="mainNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <a class="navbar-brand" href="#">Basketball for All</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="nbaDropdown"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >NBA</a>
+            <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
+              aria-expanded="false">NBA</a>
             <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
               <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
               <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
               <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="NBA_standings.html">Standings</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="ncaadrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >NCAA</a>
+            <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
+              aria-expanded="false">NCAA</a>
             <ul class="dropdown-menu" aria-labelledby="ncaadrop">
               <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NCAA  team stats.html">Offensive Team Stats </a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="olympicsDrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >Olympics</a>
+            <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Olympics</a>
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-              <li><a class="dropdown-item" href="#">TBD</a></li>
+              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
+              <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Game Changers</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
               <li><a class="dropdown-item" href="#">Another Page 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
@@ -84,60 +83,54 @@
       </div>
     </div>
   </nav>
-<div class = "text-center"> 
-<h1> What is the NBA? </h1>
-</div>
-<p1> The National Basketball Association is a basketball league located in North America. The League consists of 30 teams all located in the USA except for one in Canada.  <p1> 
-<h2> How is basketall played in the NBA? </h2>
-<div style="display: flex; justify-content: space-between; align-items: center;">
-    <div style="flex: 1; text-align: left;">
-        <img src="Jalen Green Cade Cunningham Dunk.jpg" alt="Jalen Green Dunk" style="max-width: 100%; height: auto;">
-
-    </div>
-    <div style="flex: 1; text-align: right;">
-        <p>The NBA is widely known around the world as the best and most profittable basketball league to play in. There have been debates suggesting that the NBA isn't "international" because of it's North American playing locations. To rebutal that argument; It's nearly impossible to find any basketball team outside of the NBA that can take on NBA championship teams.</p>
-
-    </div>
+  <div class="text-center">
+    <h1> What is the NBA? </h1>
   </div>
-<p2> NBA games house four quarters lasting twelve minutes for a total run-time of 48 minute games. Although the average game length goes around half-an-hour due to a fifteen minute half time break and fouling. A foul in the NBA occurs when a player does something that breaks the rules like unncessary roughness. In recent years NBA basketball players have been shooting more three point shots than ever before. </p2>
-<div style="display: flex; justify-content: space-between; align-items: center;">
-    <div style="flex: 1; text-align: left;">
-      <p>The NBA is widely known around the world as the best and most profittable basketball league to play in. There have been debates suggesting that the NBA isn't "international" because of it's North American playing locations. To rebutal that argument; It's nearly impossible to find any basketball team outside of the NBA that can take on NBA championship teams.</p>
-    </div>
-    <div style="flex: 1; text-align: right;">
-      <img src="Nikola Jokic championship.jpg" alt="Nikola Jokic" style="max-width: 100%; height: auto;">
-    </div>
-  </div>
-  
-<h3> What makes the NBA standout from the rest? </h3>
-<p4> The NBA is widely known around the world as the best and most profittable basketball league to play in. There have been debates suggesting that the NBA isn't "international" because of it's North American playing locations. To rebutal that argument; It's nearly impossible to find any basketball team outside of the NBA that can take on NBA championship teams.   </p4>
-<img src="Jaylen Brown.avif" width = 475 height = 350 alt = "Jalyen Brown">
-<img src = "Giannis and Dame.webp" width = 475 height = 350 alt = "Giannis and Dame">
-<img src = "Lebron n Luka.jpeg" width = 475 height = 350 alt = "Lebron n Luka">
+  <p1> The National Basketball Association is a basketball league located in North America. The League consists of 30
+    teams all located in the USA except for one in Canada. <p1>
+      <h2> How is basketall played in the NBA? </h2>
+      <div style="display: flex; justify-content: space-between; align-items: center;">
+        <div style="flex: 1; text-align: left;">
+          <img src="Jalen Green Cade Cunningham Dunk.jpg" alt="Jalen Green Dunk" style="max-width: 100%; height: auto;">
+
+        </div>
+        <div style="flex: 1; text-align: right;">
+          <p>The NBA is widely known around the world as the best and most profittable basketball league to play in.
+            There have been debates suggesting that the NBA isn't "international" because of it's North American playing
+            locations. To rebutal that argument; It's nearly impossible to find any basketball team outside of the NBA
+            that can take on NBA championship teams.</p>
+
+        </div>
+      </div>
+      <p2> NBA games house four quarters lasting twelve minutes for a total run-time of 48 minute games. Although the
+        average game length goes around half-an-hour due to a fifteen minute half time break and fouling. A foul in the
+        NBA occurs when a player does something that breaks the rules like unncessary roughness. In recent years NBA
+        basketball players have been shooting more three point shots than ever before. </p2>
+      <div style="display: flex; justify-content: space-between; align-items: center;">
+        <div style="flex: 1; text-align: left;">
+          <p>The NBA is widely known around the world as the best and most profittable basketball league to play in.
+            There have been debates suggesting that the NBA isn't "international" because of it's North American playing
+            locations. To rebutal that argument; It's nearly impossible to find any basketball team outside of the NBA
+            that can take on NBA championship teams.</p>
+        </div>
+        <div style="flex: 1; text-align: right;">
+          <img src="Nikola Jokic championship.jpg" alt="Nikola Jokic" style="max-width: 100%; height: auto;">
+        </div>
+      </div>
+
+      <h3> What makes the NBA standout from the rest? </h3>
+      <p4> The NBA is widely known around the world as the best and most profittable basketball league to play in. There
+        have been debates suggesting that the NBA isn't "international" because of it's North American playing
+        locations. To rebutal that argument; It's nearly impossible to find any basketball team outside of the NBA that
+        can take on NBA championship teams. </p4>
+      <img src="Jaylen Brown.avif" width=475 height=350 alt="Jalyen Brown">
+      <img src="Giannis and Dame.webp" width=475 height=350 alt="Giannis and Dame">
+      <img src="Lebron n Luka.jpeg" width=475 height=350 alt="Lebron n Luka">
 
 
-
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
