--- a/NBA season tickets.html
+++ b/NBA season tickets.html
@@ -1,77 +1,76 @@
 <!DOCTYPE HTML>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  <link rel ='stylesheet' href="stylesheet.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link rel='stylesheet' href="stylesheet.css">
 
   <title>Total Price Estimator</title>
 </head>
 
 <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Basketball for All</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mainNav"
-        aria-controls="mainNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <a class="navbar-brand" href="#">Basketball for All</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="nbaDropdown"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >NBA</a>
+            <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
+              aria-expanded="false">NBA</a>
             <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA about page.html">About NBA</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA season tickets.html">Season Tickets</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/nba_standings.html">Standings</a></li>
+              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="ncaadrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >NCAA</a>
+            <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
+              aria-expanded="false">NCAA</a>
             <ul class="dropdown-menu" aria-labelledby="ncaadrop">
               <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NCAA  team stats.html">Offensive Team Stats </a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="olympicsDrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >Olympics</a>
+            <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Olympics</a>
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-              <li><a class="dropdown-item" href="#">TBD</a></li>
+              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
+              <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Game Changers</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
               <li><a class="dropdown-item" href="#">Another Page 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
@@ -82,25 +81,26 @@
       </div>
     </div>
   </nav>
-<h1> NBA tickets </h1>
-<div class = 'text-center'>
-<p style="display: inline;">Tickets on Sale|</p><p style="display: inline;"> FAQ</p>
-<p1></p1>
-  <div>
-    <label for="item-price">Enter the price of the item:</label>
-    <input type="number" id="item-price" name="item-price" min="0" value="0">
+  <h1> NBA tickets </h1>
+  <div class='text-center'>
+    <p style="display: inline;">Tickets on Sale|</p>
+    <p style="display: inline;"> FAQ</p>
+    <p1></p1>
+    <div>
+      <label for="item-price">Enter the price of the item:</label>
+      <input type="number" id="item-price" name="item-price" min="0" value="0">
+    </div>
+    <div>
+      <label for="quantity">Enter the quantity:</label>
+      <input type="number" id="quantity" name="quantity" min="1" value="1">
+    </div>
+    <button onclick="calculateTotal()">Calculate Total</button>
+    <div>
+      <h3>Total Price: <span id="total-price">$0.00</span></h3>
+    </div>
   </div>
-  <div>
-    <label for="quantity">Enter the quantity:</label>
-    <input type="number" id="quantity" name="quantity" min="1" value="1">
-  </div>
-  <button onclick="calculateTotal()">Calculate Total</button>
-  <div>
-    <h3>Total Price: <span id="total-price">$0.00</span></h3>
-  </div>
-</div>
 
-  <script src = "NBA.js"> </script>
+  <script src="NBA.js"> </script>
   <script>
     function calculateTotal() {
       const priceInput = document.getElementById("item-price");
@@ -118,74 +118,78 @@
       const total = price * quantity;
       totalPriceDisplay.textContent = "$" + total.toFixed(2);
     }
-    
+
   </script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-<div class="container mt-5">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
+  <div class="container mt-5">
     <h1>Select Your Season Tickets</h1>
     <div class="mb-3">
-        <label for="monthPicker" class="form-label">Select Month:</label>
-        <select class="form-select" id="monthPicker" aria-label="Select Month">
-            <option selected>All Months</option>
-            <option value="october">October</option>
-            <option value="november">November</option>
-            <option value="december">December</option>
-            <option value="january">January</option>
-            <option value="february">February</option>
-            <option value="march">March</option>
-            <option value="april">April</option>
-            <option value="may">May</option>
-            <option value="june">June</option>
-        </select>
+      <label for="monthPicker" class="form-label">Select Month:</label>
+      <select class="form-select" id="monthPicker" aria-label="Select Month">
+        <option selected>All Months</option>
+        <option value="october">October</option>
+        <option value="november">November</option>
+        <option value="december">December</option>
+        <option value="january">January</option>
+        <option value="february">February</option>
+        <option value="march">March</option>
+        <option value="april">April</option>
+        <option value="may">May</option>
+        <option value="june">June</option>
+      </select>
     </div>
 
     <div class="mb-3">
-        <label for="teamPicker" class="form-label">Select Team:</label>
-        <select class="form-select" id="teamPicker" aria-label="Select Team">
-            <option selected>All Teams</option>
-            <option value="atlanta-hawks">Atlanta Hawks</option>
-            <option value="boston-celtics">Boston Celtics</option>
-            <option value="brooklyn-nets">Brooklyn Nets</option>
-            <option value="charlotte-hornets">Charlotte Hornets</option>
-            <option value="chicago-bulls">Chicago Bulls</option>
-            <option value="cleveland-cavaliers">Cleveland Cavaliers</option>
-            <option value="dallas-mavericks">Dallas Mavericks</option>
-            <option value="denver-nuggets">Denver Nuggets</option>
-            <option value="detroit-pistons">Detroit Pistons</option>
-            <option value="golden-state-warriors">Golden State Warriors</option>
-            <option value="houston-rockets">Houston Rockets</option>
-            <option value="indiana-pacers">Indiana Pacers</option>
-            <option value="los-angeles-clippers">Los Angeles Clippers</option>
-            <option value="los-angeles-lakers">Los Angeles Lakers</option>
-            <option value="memphis-grizzlies">Memphis Grizzlies</option>
-            <option value="miami-heat">Miami Heat</option>
-            <option value="milwaukee-bucks">Milwaukee Bucks</option>
-            <option value="minnesota-timberwolves">Minnesota Timberwolves</option>
-            <option value="new-orleans-pelicans">New Orleans Pelicans</option>
-            <option value="new-york-knicks">New York Knicks</option>
-            <option value="oklahoma-city-thunder">Oklahoma City Thunder</option>
-            <option value="orlando-magic">Orlando Magic</option>
-            <option value="philadelphia-76ers">Philadelphia 76ers</option>
-            <option value="phoenix-suns">Phoenix Suns</option>
-            <option value="portland-trail-blazers">Portland Trail Blazers</option>
-            <option value="sacramento-kings">Sacramento Kings</option>
-            <option value="san-antonio-spurs">San Antonio Spurs</option>
-            <option value="toronto-raptors">Toronto Raptors</option>
-            <option value="utah-jazz">Utah Jazz</option>
-            <option value="washington-wizards">Washington Wizards</option>
-            </select>
+      <label for="teamPicker" class="form-label">Select Team:</label>
+      <select class="form-select" id="teamPicker" aria-label="Select Team">
+        <option selected>All Teams</option>
+        <option value="atlanta-hawks">Atlanta Hawks</option>
+        <option value="boston-celtics">Boston Celtics</option>
+        <option value="brooklyn-nets">Brooklyn Nets</option>
+        <option value="charlotte-hornets">Charlotte Hornets</option>
+        <option value="chicago-bulls">Chicago Bulls</option>
+        <option value="cleveland-cavaliers">Cleveland Cavaliers</option>
+        <option value="dallas-mavericks">Dallas Mavericks</option>
+        <option value="denver-nuggets">Denver Nuggets</option>
+        <option value="detroit-pistons">Detroit Pistons</option>
+        <option value="golden-state-warriors">Golden State Warriors</option>
+        <option value="houston-rockets">Houston Rockets</option>
+        <option value="indiana-pacers">Indiana Pacers</option>
+        <option value="los-angeles-clippers">Los Angeles Clippers</option>
+        <option value="los-angeles-lakers">Los Angeles Lakers</option>
+        <option value="memphis-grizzlies">Memphis Grizzlies</option>
+        <option value="miami-heat">Miami Heat</option>
+        <option value="milwaukee-bucks">Milwaukee Bucks</option>
+        <option value="minnesota-timberwolves">Minnesota Timberwolves</option>
+        <option value="new-orleans-pelicans">New Orleans Pelicans</option>
+        <option value="new-york-knicks">New York Knicks</option>
+        <option value="oklahoma-city-thunder">Oklahoma City Thunder</option>
+        <option value="orlando-magic">Orlando Magic</option>
+        <option value="philadelphia-76ers">Philadelphia 76ers</option>
+        <option value="phoenix-suns">Phoenix Suns</option>
+        <option value="portland-trail-blazers">Portland Trail Blazers</option>
+        <option value="sacramento-kings">Sacramento Kings</option>
+        <option value="san-antonio-spurs">San Antonio Spurs</option>
+        <option value="toronto-raptors">Toronto Raptors</option>
+        <option value="utah-jazz">Utah Jazz</option>
+        <option value="washington-wizards">Washington Wizards</option>
+      </select>
     </div>
 
     <button class="btn btn-primary">Find Tickets</button>
 
     <div id="ticketResults" class="mt-4">
-        </div>
-</div>
+    </div>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-<script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
+  <script>
 
     const findTicketsButton = document.querySelector('.btn-primary');
     const monthPicker = document.getElementById('monthPicker');
@@ -193,27 +197,30 @@
     const ticketResultsDiv = document.getElementById('ticketResults');
 
     findTicketsButton.addEventListener('click', () => {
-        const selectedMonth = monthPicker.value;
-        const selectedTeam = teamPicker.value;
+      const selectedMonth = monthPicker.value;
+      const selectedTeam = teamPicker.value;
 
 
 
-        let resultsHTML = `<h3>Tickets for:</h3>`;
-        if (selectedMonth !== 'All Months') {
-            resultsHTML += `<p>Month: ${selectedMonth.charAt(0).toUpperCase() + selectedMonth.slice(1)}</p>`;
-        } else {
-            resultsHTML += `<p>Month: All Months</p>`;
-        }
-        if (selectedTeam !== 'All Teams') {
-            const formattedTeam = selectedTeam.split('-').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
-            resultsHTML += `<p>Team: ${formattedTeam}</p>`;
-        } else {
-            resultsHTML += `<p>Team: All Teams</p>`;
-        }
+      let resultsHTML = `<h3>Tickets for:</h3>`;
+      if (selectedMonth !== 'All Months') {
+        resultsHTML += `<p>Month: ${selectedMonth.charAt(0).toUpperCase() + selectedMonth.slice(1)}</p>`;
+      } else {
+        resultsHTML += `<p>Month: All Months</p>`;
+      }
+      if (selectedTeam !== 'All Teams') {
+        const formattedTeam = selectedTeam.split('-').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
+        resultsHTML += `<p>Team: ${formattedTeam}</p>`;
+      } else {
+        resultsHTML += `<p>Team: All Teams</p>`;
+      }
 
-        ticketResultsDiv.innerHTML = resultsHTML + `<p>The season is over silly! Wait for tickets in the fall!`;
+      ticketResultsDiv.innerHTML = resultsHTML + `<p>The season is over silly! Wait for tickets in the fall!`;
     });
-</script>
-
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
