--- a/NCAA  team stats.html
+++ b/NCAA  team stats.html
@@ -1,74 +1,74 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-        <link rel ='stylesheet' href="stylesheet.css">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link rel='stylesheet' href="stylesheet.css">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Basketball for All</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mainNav"
-        aria-controls="mainNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <a class="navbar-brand" href="#">Basketball for All</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="nbaDropdown"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >NBA</a>
+            <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
+              aria-expanded="false">NBA</a>
             <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA about page.html">About NBA</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA season tickets.html">Season Tickets</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/nba_standings.html">Standings</a></li>
+              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="ncaadrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >NCAA</a>
+            <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
+              aria-expanded="false">NCAA</a>
             <ul class="dropdown-menu" aria-labelledby="ncaadrop">
               <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NCAA  team stats.html">Offensive Team Stats </a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="olympicsDrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >Olympics</a>
+            <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Olympics</a>
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-              <li><a class="dropdown-item" href="#">TBD</a></li>
+              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
+              <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Game Changers</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
               <li><a class="dropdown-item" href="#">Another Page 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
@@ -79,97 +79,101 @@
       </div>
     </div>
   </nav>
-    <div style="border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
-        <h3>NCAA Men's Basketball Offensive Rating (Points Per Game)</h3>
-        <p>Here is a list of teams and their points per game (PPG), which serves as a measure of their offensive rating for the current season:</p>
-        <ol>
-            <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
-                <div>
-                  <li>Alabama: 90.7</li>
+  <div style="border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+    <h3>NCAA Men's Basketball Offensive Rating (Points Per Game)</h3>
+    <p>Here is a list of teams and their points per game (PPG), which serves as a measure of their offensive rating for
+      the current season:</p>
+    <ol>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Alabama: 90.7</li>
 
-                </div>
-                <img src="AlabamaNCAAbasketball.jpg" width = 250 height = 150 alt="NCAA Alabama" style="margin-left: 10px;">
-              </div>
-        <li>Gonzaga: 86.4</li>
-        <li>South Dakota: 85.2</li>
-        <li>Cornell: 85.1</li>    
-          <li>Florida: 84.8</li>
-          <li>Winthrop: 84.7</li>
-          <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
-            <div>
-                <li>Kentucky: 84.4</li>
-
-            </div>
-            <img src="NCAA Kentucy .avif" width = 250 height = 150 alt="NCAA Kentucky" style="margin-left: 10px;">
-          </div>
-          <li>Akron: 84.0</li>
-          <li>Missouri: 83.6</li>
-          <li>Illinois: 83.6</li>
-          <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
-            <div>
-                <li>Duke: 83.2</li>
-
-            </div>
-            <img src="NCAA Duke basketball.webp" width = 250 height = 150 alt="NCAA Duke" style="margin-left: 10px;">
-          </div>
-          <li>Auburn: 83.0</li>
-          <li>Samford: 82.9</li>
-          <li>North Florida: 82.8</li>
-          <li>Arizona: 82.5</li>
-          <li>Iowa: 82.5</li>
-          <li>UNC Asheville: 82.2</li>
-          <li>UAB: 82.2</li>
-          <li>Cal Poly: 82.1</li>
-          <li>Santa Clara: 81.9</li>
-          <li>Bryant: 81.8</li>
-          <li>High Point: 81.7</li>
-          <li>BYU: 81.4</li>
-          <li>Yale: 81.3</li>
-          <li>North Dakota St.: 81.1</li>
-          <li>Maryland: 81.1</li>
-          <li>Texas Tech: 80.9</li>
-          <li>North Carolina: 80.7</li>
-          <li>Purdue Fort Wayne: 80.7</li>
-          <li>Northern Colo.: 80.6</li>
-          <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
-            <div>
-                <li>Miami (OH): 80.6</li>
-
-            </div>
-            <img src="NCAA Miami.webp" width = 250 height = 150 alt="NCAA Miami" style="margin-left: 10px;">
-          </div>
-          <li>New Mexico: 80.5</li>
-          <li>Iowa St.: 80.3</li>
-          <li>CSUN: 80.3</li>
-          <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
-            <div>
-                <li>Wisconsin: 80.1</li>
-
-            </div>
-            <img src="NCAA wisconsin.webp" width = 250 height = 150 alt="NCAA Wisconsin" style="margin-left: 10px;">
-          </div>
-          <li>Indiana St.: 80.1</li>
-          <li>Morgan St.: 80.0</li>
-          <li>UMBC: 80.0</li>
-          <li>SMU: 79.9</li>
-          <li>Utah St.: 79.9</li>
-          <li>Memphis: 79.9</li>
-          <li>Ohio: 79.8</li>
-          <li>UCF: 79.8</li>
-          <li>Chattanooga: 79.7</li>
-          <li>South Dakota St.: 79.6</li>
-          <li>Mississippi St.: 79.5</li>
-          <li>South Carolina St.: 79.5</li>
-          <li>UMass Lowell: 79.5</li>
-          <li>Arkansas St.: 79.4</li>
-          <li>UC San Diego: 79.3</li>
-        </ol>
-        <p style="font-size: 0.8em; color: #777;">(Based on data provided.)</p>
+        </div>
+        <img src="AlabamaNCAAbasketball.jpg" width=250 height=150 alt="NCAA Alabama" style="margin-left: 10px;">
       </div>
-      
-      
+      <li>Gonzaga: 86.4</li>
+      <li>South Dakota: 85.2</li>
+      <li>Cornell: 85.1</li>
+      <li>Florida: 84.8</li>
+      <li>Winthrop: 84.7</li>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Kentucky: 84.4</li>
+
+        </div>
+        <img src="NCAA Kentucy .avif" width=250 height=150 alt="NCAA Kentucky" style="margin-left: 10px;">
+      </div>
+      <li>Akron: 84.0</li>
+      <li>Missouri: 83.6</li>
+      <li>Illinois: 83.6</li>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Duke: 83.2</li>
+
+        </div>
+        <img src="NCAA Duke basketball.webp" width=250 height=150 alt="NCAA Duke" style="margin-left: 10px;">
+      </div>
+      <li>Auburn: 83.0</li>
+      <li>Samford: 82.9</li>
+      <li>North Florida: 82.8</li>
+      <li>Arizona: 82.5</li>
+      <li>Iowa: 82.5</li>
+      <li>UNC Asheville: 82.2</li>
+      <li>UAB: 82.2</li>
+      <li>Cal Poly: 82.1</li>
+      <li>Santa Clara: 81.9</li>
+      <li>Bryant: 81.8</li>
+      <li>High Point: 81.7</li>
+      <li>BYU: 81.4</li>
+      <li>Yale: 81.3</li>
+      <li>North Dakota St.: 81.1</li>
+      <li>Maryland: 81.1</li>
+      <li>Texas Tech: 80.9</li>
+      <li>North Carolina: 80.7</li>
+      <li>Purdue Fort Wayne: 80.7</li>
+      <li>Northern Colo.: 80.6</li>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Miami (OH): 80.6</li>
+
+        </div>
+        <img src="NCAA Miami.webp" width=250 height=150 alt="NCAA Miami" style="margin-left: 10px;">
+      </div>
+      <li>New Mexico: 80.5</li>
+      <li>Iowa St.: 80.3</li>
+      <li>CSUN: 80.3</li>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Wisconsin: 80.1</li>
+
+        </div>
+        <img src="NCAA wisconsin.webp" width=250 height=150 alt="NCAA Wisconsin" style="margin-left: 10px;">
+      </div>
+      <li>Indiana St.: 80.1</li>
+      <li>Morgan St.: 80.0</li>
+      <li>UMBC: 80.0</li>
+      <li>SMU: 79.9</li>
+      <li>Utah St.: 79.9</li>
+      <li>Memphis: 79.9</li>
+      <li>Ohio: 79.8</li>
+      <li>UCF: 79.8</li>
+      <li>Chattanooga: 79.7</li>
+      <li>South Dakota St.: 79.6</li>
+      <li>Mississippi St.: 79.5</li>
+      <li>South Carolina St.: 79.5</li>
+      <li>UMass Lowell: 79.5</li>
+      <li>Arkansas St.: 79.4</li>
+      <li>UC San Diego: 79.3</li>
+    </ol>
+    <p style="font-size: 0.8em; color: #777;">(Based on data provided.)</p>
+  </div>
 
 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
