--- a/NCAA stat leaders.html
+++ b/NCAA stat leaders.html
@@ -1,225 +1,232 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title> Selected Stats</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title> Selected Stats</title>
 
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-<link rel ='stylesheet' href="stylesheet.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link rel='stylesheet' href="stylesheet.css">
 
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Basketball for All</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#mainNav"
-            aria-controls="mainNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-    
-          <div class="collapse navbar-collapse" id="mainNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="nbaDropdown"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >NBA</a>
-                <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-                  <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
-                  <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
-                  <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
-                </ul>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Basketball for All</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
+              aria-expanded="false">NBA</a>
+            <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+              <li>
+                <hr class="dropdown-divider">
               </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="ncaadrop"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >NCAA</a>
-                <ul class="dropdown-menu" aria-labelledby="ncaadrop">
-                  <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="olympicsDrop"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >Olympics</a>
-                <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-                  <li><a class="dropdown-item" href="#">TBD</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
-              </li>
+              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
-   <body>
-<div class="text-center">
-<h1>  NCAA 2024-2025 Season Stat Leaders  </h1>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-<div class ="text-center">
-</div>
-<p> 03/16/2025 (End of NCAA Regular Season)  </p>
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Points</th>
-        <th scope="col">PPG</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Eric Dixon</td>
-        <td>23.3</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Trent McLaughlin</td>
-        <td>22.1</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>PJ Haggerty</td>
-        <td>21.7</td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Rebounds</th>
-        <th scope="col">RPG</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Carson Towl</td>
-        <td>12.4</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Oscar Cluff</td>
-        <td>12.3</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Yaxel Lendeborg</td>
-        <td>11.4</td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col"> Assists</th>
-        <th scope="col">APG</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Ryan Nembhard</td>
-        <td>9.8</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Braden Smith</td>
-        <td>8.7</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Sean Newman Jr.</td>
-        <td>7.9</td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col"> Blocks</th>
-        <th scope="col">BPG</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Malcolm Wilson</td>
-        <td>3.3</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Obinna Anochili-Killen</td>
-        <td>3.2</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Gabe Dynes</td>
-        <td>3.1</td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col"> Steals</th>
-        <th scope="col">SPG</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Kellen Tynes</td>
-        <td>3.1</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Hayden Gray</td>
-        <td>3.1</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Tayton Conerway</td>
-        <td>2.9</td>
-      </tr>
-    </tbody>
-  </table>
-   </body>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
+              aria-expanded="false">NCAA</a>
+            <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+              <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Olympics</a>
+            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
+              <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Game Changers</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <body>
+    <div class="text-center">
+      <h1> NCAA 2024-2025 Season Stat Leaders </h1>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
+      <div class="text-center">
+      </div>
+      <p> 03/16/2025 (End of NCAA Regular Season) </p>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Points</th>
+            <th scope="col">PPG</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Eric Dixon</td>
+            <td>23.3</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Trent McLaughlin</td>
+            <td>22.1</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>PJ Haggerty</td>
+            <td>21.7</td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Rebounds</th>
+            <th scope="col">RPG</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Carson Towl</td>
+            <td>12.4</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Oscar Cluff</td>
+            <td>12.3</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Yaxel Lendeborg</td>
+            <td>11.4</td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col"> Assists</th>
+            <th scope="col">APG</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Ryan Nembhard</td>
+            <td>9.8</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Braden Smith</td>
+            <td>8.7</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Sean Newman Jr.</td>
+            <td>7.9</td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col"> Blocks</th>
+            <th scope="col">BPG</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Malcolm Wilson</td>
+            <td>3.3</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Obinna Anochili-Killen</td>
+            <td>3.2</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Gabe Dynes</td>
+            <td>3.1</td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col"> Steals</th>
+            <th scope="col">SPG</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Kellen Tynes</td>
+            <td>3.1</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Hayden Gray</td>
+            <td>3.1</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Tayton Conerway</td>
+            <td>2.9</td>
+          </tr>
+        </tbody>
+      </table>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
+  </body>
+
 </html>
