--- a/Olympics winners.html
+++ b/Olympics winners.html
@@ -1,172 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Basketball for All</title>
 
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
-    crossorigin="anonymous"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="stylesheet.css" />
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="#">Basketball for All</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#mainNav"
-            aria-controls="mainNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-    
-          <div class="collapse navbar-collapse" id="mainNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="nbaDropdown"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >NBA</a>
-                <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-                  <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
-                  <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
-                  <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
-                </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Basketball for All</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
+              aria-expanded="false">NBA</a>
+            <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+              <li>
+                <hr class="dropdown-divider">
               </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="ncaadrop"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >NCAA</a>
-                <ul class="dropdown-menu" aria-labelledby="ncaadrop">
-                  <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-                  <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="olympicsDrop"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >Olympics</a>
-                <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-                  <li><a class="dropdown-item" href="#">TBD</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
-              </li>
+              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
-
-      <div style="border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
-        <h3>Olympic Men's Basketball Gold Medalists (Past 20 Years)</h3>
-        <p>The countries that won gold medals in men's basketball at the Olympics in the last 20 years (from 2005 to 2025).</p>
-        <table style="width: 100%; border-collapse: collapse;">
-          <thead>
-            <tr>
-              <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Year</th>
-              <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Winning Country (Gold Medalists)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2008 (Beijing)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2012 (London)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2016 (Rio de Janeiro)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2020 (Tokyo - held in 2021)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2024 (Paris)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-          </tbody>
-        </table>
-        <p style="font-size: 0.8em; color: #777;">Note: The 2020 Summer Olympics were postponed to 2021 due to the COVID-19 pandemic.</p>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
+              aria-expanded="false">NCAA</a>
+            <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+              <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Olympics</a>
+            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
+              <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Game Changers</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
+          </li>
+        </ul>
       </div>
-      
-      <div style="border: 1px solid #ccc; padding: 15px; margin-top: 20px; margin-bottom: 15px;">
-        <h3>Olympic Women's Basketball Gold Medalists (Past 20 Years)</h3>
-        <p>The countries that won gold medals in women's basketball in the Olympics for the last 20 years (from 2005 to 2025).</p>
-        <table style="width: 100%; border-collapse: collapse;">
-          <thead>
-            <tr>
-              <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Year</th>
-              <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Winning Country(Gold Medalists)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2008 (Beijing)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2012 (London)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2016 (Rio de Janeiro)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2020 (Tokyo - held in 2021)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-            <tr>
-              <td style="border: 1px solid #ddd; padding: 8px;">2024 (Paris)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
-            </tr>
-          </tbody>
-        </table>
-        <p style="font-size: 0.8em; color: #777;">Note: The 2020 Summer Olympics were postponed to 2021 due to the COVID-19 pandemic.</p>
-      </div>
+    </div>
+  </nav>
+
+  <div style="border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+    <h3>Olympic Men's Basketball Gold Medalists (Past 20 Years)</h3>
+    <p>The countries that won gold medals in men's basketball at the Olympics in the last 20 years (from 2005 to 2025).
+    </p>
+    <table style="width: 100%; border-collapse: collapse;">
+      <thead>
+        <tr>
+          <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Year</th>
+          <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Winning Country (Gold Medalists)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2008 (Beijing)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2012 (London)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2016 (Rio de Janeiro)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2020 (Tokyo - held in 2021)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2024 (Paris)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+      </tbody>
+    </table>
+    <p style="font-size: 0.8em; color: #777;">Note: The 2020 Summer Olympics were postponed to 2021 due to the COVID-19
+      pandemic.</p>
+  </div>
+
+  <div style="border: 1px solid #ccc; padding: 15px; margin-top: 20px; margin-bottom: 15px;">
+    <h3>Olympic Women's Basketball Gold Medalists (Past 20 Years)</h3>
+    <p>The countries that won gold medals in women's basketball in the Olympics for the last 20 years (from 2005 to
+      2025).</p>
+    <table style="width: 100%; border-collapse: collapse;">
+      <thead>
+        <tr>
+          <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Year</th>
+          <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Winning Country(Gold Medalists)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2008 (Beijing)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2012 (London)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2016 (Rio de Janeiro)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2020 (Tokyo - held in 2021)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+        <tr>
+          <td style="border: 1px solid #ddd; padding: 8px;">2024 (Paris)</td>
+          <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
+        </tr>
+      </tbody>
+    </table>
+    <p style="font-size: 0.8em; color: #777;">Note: The 2020 Summer Olympics were postponed to 2021 due to the COVID-19
+      pandemic.</p>
+  </div>
 
 
 
 
 
 
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
 
 
 </body>
-  </html>
+
+</html>
